--- a/.env
+++ b/.env
@@ -3,4 +3,7 @@
 # REACT_APP_API_HOST = https://cc74ed31-abf1-4f25-9f54-6751af303c5d.mock.pstmn.io
 
 # mockup api 2
-REACT_APP_API_HOST = https://a0d9ce26-548f-4689-9f1e-b1c86fc2235a.mock.pstmn.io
+# REACT_APP_API_HOST = https://a0d9ce26-548f-4689-9f1e-b1c86fc2235a.mock.pstmn.io
+
+# mockup api 3
+REACT_APP_API_HOST = https://bf2bccbc-be2f-494b-8ab4-4f712e9657ac.mock.pstmn.io
